--- a/AgileFileManagerv1/AgileFileManagerv1/MainWindow.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Frame Name="MainFrame"/>
+        <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
