--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
@@ -5,10 +5,35 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AgileFileManagerv1.WorkingBoard.View"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="800" d:DesignWidth="200"
       Title="TS_WB_ToDo">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Button Margin="10" Click="EV_StartFile">
+            <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock> 
+        </Button>
+        <Button Margin="10" Grid.Column="1">
+            <TextBlock TextAlignment="Center">Crear<LineBreak/>Expediente</TextBlock>
+        </Button>
+        <Button Margin="10" Grid.Row="1">
+            <TextBlock TextAlignment="Center">Editar<LineBreak/>Expediente</TextBlock>
+        </Button>
+        <Button Margin="10" Grid.Column="1" Grid.Row="1">
+            <TextBlock TextAlignment="Center">Eliminar<LineBreak/>Expediente</TextBlock>
+        </Button>
+        <Button Margin="10" Grid.Column="0" Grid.Row="2">
+            <TextBlock TextAlignment="Center">Tomar<LineBreak/>Expediente</TextBlock>
+        </Button>
     </Grid>
 </Page>
