--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/WB_ToDo/View/TS_WB_ToDo_Main.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/WB_ToDo/View/TS_WB_ToDo_Main.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Button Margin="10">
+        <Button Name="BT_SaveFile" IsEnabled="False" Margin="10" Click="EV_SaveFile">
             <TextBlock TextAlignment="Center">Guardar<LineBreak/>Expediente</TextBlock>
         </Button>
         <Button Margin="10" Grid.Column="1">
