--- a/AgileFileManagerv1/AgileFileManagerv1/Main/View/NV_Main.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/Main/View/NV_Main.xaml
@@ -19,7 +19,7 @@
         </Grid.ColumnDefinitions>
         <Button Name="BT_Client" Margin="20">Clientes</Button>
         <Button Name="BT_WorkingBoard" Margin="20" Grid.Column="1" Click="EV_WorkingBoard">Expedientes</Button>
-        <Button Name="BT_Config" Margin="20" Grid.Column="2">Configuración</Button>
+        <Button Name="BT_Config" IsEnabled="false" Margin="20" Grid.Column="2">Configuración</Button>
         <Button Name="BT_Close" Margin="20" Grid.Column="5">Salir</Button>
     </Grid>
 </Page>
