--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/WB_ToDo/View/TS_WB_ToDo_Main.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/WB_ToDo/View/TS_WB_ToDo_Main.xaml
@@ -23,8 +23,11 @@
         <Button Name="BT_SaveFile" IsEnabled="False" Margin="10" Click="EV_SaveFile">
             <TextBlock TextAlignment="Center">Guardar<LineBreak/>Expediente</TextBlock>
         </Button>
-        <Button Margin="10" Grid.Column="1">
+        <Button Margin="10" Grid.Column="1" Click="EV_DiscardFile">
             <TextBlock TextAlignment="Center">Descartar<LineBreak/>Expediente</TextBlock>
+        </Button>
+        <Button Name="BT_FinishFile" IsEnabled="false" Margin="10" Grid.Row="1" Click="EV_FinishFile">
+            <TextBlock TextAlignment="Center">Terminar<LineBreak/>Expediente</TextBlock>
         </Button>
     </Grid>
 </Page>
