--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToDo.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToDo.xaml
@@ -26,7 +26,7 @@
             <Label Grid.Column="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Búsqueda:</Label>
             <TextBox Name="CodeSearchBox"  Grid.Column="1" VerticalContentAlignment="Center" Margin="20" MaxHeight="30"></TextBox>
         </Grid>
-        <DataGrid Grid.ColumnSpan="4" Grid.Row="1" Name="UsersTable" FontSize="20" IsReadOnly="True" SelectionMode="Single" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False"
+        <DataGrid Name="DG_FilesPending" Grid.ColumnSpan="4" Grid.Row="1" FontSize="20" IsReadOnly="True" SelectionMode="Single" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False"
                   HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" ColumnWidth="*" Margin="20"/>
     </Grid>
 </Page>
