--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToFinish.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToFinish.xaml
@@ -9,6 +9,24 @@
       Title="MC_WB_ToFinish">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Búsqueda:</Label>
+            <TextBox Name="TX_SearchBox"  Grid.Column="1" VerticalContentAlignment="Center" Margin="20" MaxHeight="30"></TextBox>
+        </Grid>
+        <DataGrid Name="DG_FilesToFinish" Grid.ColumnSpan="4" Grid.Row="1" FontSize="20" IsReadOnly="True" SelectionMode="Single" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False"
+                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" ColumnWidth="*" Margin="20"/>
     </Grid>
 </Page>
