--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/CallIn/View/TS_WB_CallIn_Main.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/CallIn/View/TS_WB_CallIn_Main.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="AgileFileManagerv1.WorkingBoard.View.TS_WB_ToDo"
+﻿<Page x:Class="AgileFileManagerv1.WorkingBoard.Nodes.CallIn.View.TS_WB_CallIn_Main"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AgileFileManagerv1.WorkingBoard.View"
+      xmlns:local="clr-namespace:AgileFileManagerv1.WorkingBoard.Nodes.CallIn.View"
       mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="200"
-      Title="TS_WB_ToDo">
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="TS_WB_CallIn_Main">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -20,17 +20,14 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Button Margin="10" Click="EV_StartCallIn">
-            <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock> 
+        <Button Name="BT_SaveFile" IsEnabled="False" Margin="10" Click="EV_SaveFile">
+            <TextBlock TextAlignment="Center">Guardar<LineBreak/>Expediente</TextBlock>
         </Button>
-        <Button Margin="10" Grid.Column="1">
-            <TextBlock TextAlignment="Center">Crear<LineBreak/>Expediente</TextBlock>
+        <Button Margin="10" Grid.Column="1" Click="EV_DiscardFile">
+            <TextBlock TextAlignment="Center">Descartar<LineBreak/>Expediente</TextBlock>
         </Button>
-        <Button IsEnabled="false" Margin="10" Grid.Row="1">
-            <TextBlock TextAlignment="Center">Ver<LineBreak/>Expediente</TextBlock>
-        </Button>
-        <Button IsEnabled="False" Margin="10" Grid.Column="1" Grid.Row="1">
-            <TextBlock TextAlignment="Center">Tomar<LineBreak/>Expediente</TextBlock>
+        <Button Name="BT_FinishFile" IsEnabled="false" Margin="10" Grid.Row="1" Click="EV_FinishFile">
+            <TextBlock TextAlignment="Center">Terminar<LineBreak/>Expediente</TextBlock>
         </Button>
     </Grid>
 </Page>
