--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToFinish.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToFinish.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Button Margin="10">
+        <Button Margin="10" Click="EV_StartCallIn">
             <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock>
         </Button>
         <Button Margin="10" Grid.Column="1">
