--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/Common/MC_WB_Common_Licenses.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/Nodes/Common/MC_WB_Common_Licenses.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="AgileFileManagerv1.WorkingBoard.Nodes.CallIn.View.MC_WB_CallIn_Licenses"
+﻿<Page x:Class="AgileFileManagerv1.WorkingBoard.Nodes.Common.MC_WB_Common_Licenses"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AgileFileManagerv1.WorkingBoard.Nodes.CallIn.View"
+      xmlns:local="clr-namespace:AgileFileManagerv1.WorkingBoard.Nodes.Common"
       mc:Ignorable="d" 
       d:DesignHeight="800" d:DesignWidth="1000"
-      Title="MC_WB_CallIn_Licenses">
+      Title="MC_WB_Common_Licenses">
 
     <Grid Name="MainGrid">
         <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">
