--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_InProgress.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_InProgress.xaml
@@ -23,7 +23,7 @@
         <Button Margin="10" Click="EV_StartCallIn">
             <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock>
         </Button>
-        <Button Margin="10" Grid.Column="1">
+        <Button Margin="10" Grid.Column="1" Click="EV_StartNewFile">
             <TextBlock TextAlignment="Center">Crear<LineBreak/>Expediente</TextBlock>
         </Button>
         <Button IsEnabled="False" Margin="10" Grid.Row="1">
