--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
@@ -23,13 +23,13 @@
         <Button Margin="10" Click="EV_StartCallIn">
             <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock> 
         </Button>
-        <Button Margin="10" Grid.Column="1">
+        <Button Margin="10" Grid.Column="1" Click="EV_StartNewFile">
             <TextBlock TextAlignment="Center">Crear<LineBreak/>Expediente</TextBlock>
         </Button>
-        <Button IsEnabled="false" Margin="10" Grid.Row="1">
+        <Button Name="BT_OpenFile" IsEnabled="false" Margin="10" Grid.Row="1" Click="EV_OpenFile">
             <TextBlock TextAlignment="Center">Ver<LineBreak/>Expediente</TextBlock>
         </Button>
-        <Button IsEnabled="False" Margin="10" Grid.Column="1" Grid.Row="1">
+        <Button Name="BT_GetFile" IsEnabled="False" Margin="10" Grid.Column="1" Grid.Row="1" Click="EV_GetFile">
             <TextBlock TextAlignment="Center">Tomar<LineBreak/>Expediente</TextBlock>
         </Button>
     </Grid>
