--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_Finished.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_Finished.xaml
@@ -27,6 +27,6 @@
             <TextBox Name="CodeSearchBox"  Grid.Column="1" VerticalContentAlignment="Center" Margin="20" MaxHeight="30"></TextBox>
         </Grid>
         <DataGrid Name="DG_FilesFinished" Grid.ColumnSpan="4" Grid.Row="1" FontSize="14" IsReadOnly="True" SelectionMode="Single" CanUserResizeRows="False" CanUserReorderColumns="False"
-                  HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="20"/>
+                  HorizontalAlignment="Center" HorizontalContentAlignment="Stretch" Margin="20"/>
     </Grid>
 </Page>
