--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToFinish.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/MC_WB_ToFinish.xaml
@@ -26,7 +26,7 @@
             <Label Grid.Column="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Búsqueda:</Label>
             <TextBox Name="TX_SearchBox"  Grid.Column="1" VerticalContentAlignment="Center" Margin="20" MaxHeight="30"></TextBox>
         </Grid>
-        <DataGrid Name="DG_FilesToFinish" Grid.ColumnSpan="4" Grid.Row="1" FontSize="14" IsReadOnly="True" SelectionMode="Single" CanUserResizeColumns="False" CanUserReorderColumns="False"
+        <DataGrid Name="DG_FilesToFinish" Grid.ColumnSpan="4" Grid.Row="1" FontSize="14" IsReadOnly="True" SelectionMode="Single" CanUserResizeRows="False" CanUserReorderColumns="False"
                   HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" ColumnWidth="*" Margin="20"/>
     </Grid>
 </Page>
