--- a/AgileFileManagerv1/AgileFileManagerv1/FloatWindows/FW_Clients/Controller/FW_Clients.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/FloatWindows/FW_Clients/Controller/FW_Clients.xaml
@@ -25,7 +25,7 @@
             <TextBox Name="TB_ClientSearch" Grid.Column="1" VerticalAlignment="Center" Margin="5"></TextBox>
         </Grid>
         <DataGrid Name="DG_Clients" Grid.ColumnSpan="2" Grid.Row="1" Margin="15"
-                  IsReadOnly="True" SelectionMode="Single" CanUserResizeColumns="False" CanUserResizeRows="False"
+                  IsReadOnly="True" SelectionMode="Single" CanUserResizeRows="False"
                   HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" ColumnWidth="*"></DataGrid>
         <Button Grid.Row="2" Name="BT_ClientSelect" Click="EV_ClientOpen" Margin="10">Continuar</Button>
     </Grid>
