--- a/AgileFileManagerv1/AgileFileManagerv1/App.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AgileFileManagerv1"
-             StartupUri="MainWindow.xaml">
+             StartupUri="FloatWindows/FW_Login/Controller/FW_Login.xaml">
     <Application.Resources>
          
     </Application.Resources>
