--- a/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/WorkingBoard/View/TS_WB_ToDo.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Button Margin="10" Click="EV_StartCallIn">
+        <Button Margin="10" Click="EV_StartCallIn" IsEnabled="False">
             <TextBlock TextAlignment="Center">Atender<LineBreak/>Llamada</TextBlock> 
         </Button>
         <Button Margin="10" Grid.Column="1" Click="EV_StartNewFile">
