--- a/AgileFileManagerv1/AgileFileManagerv1/MainWindow.xaml
+++ b/AgileFileManagerv1/AgileFileManagerv1/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AgileFileManagerv1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        Icon=".\Resources\Icon\myIcon.png">
     <Grid>
         <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
